--- a/style.css
+++ b/style.css
@@ -169,11 +169,14 @@ footer {
 }
 
 .card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px 8px 0 0; /* Bo tròn góc trên */
-    display: block;
-    margin: 0 auto;
+  display: block;
+  max-width: 100%;
+  max-height: 160px;
+  width: auto;
+  height: auto;
+  margin: 0 auto 1rem;
+  object-fit: cover;
+  border-radius: 8px;
 }
 
 .card-content {
